deploy/deploy.yaml
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: toleration-injector
#   namespace: statcan-system
#   labels:
#     apps.kubernetes.io/name: toleration-injector
# ---
# apiVersion: cert-manager.io/v1beta1
# kind: Issuer
# metadata:
#   name: toleration-injector-issuer
#   namespace: statcan-system
#   labels:
#     apps.kubernetes.io/name: toleration-injector
# spec:
#   selfSigned: {}
# ---
# apiVersion: cert-manager.io/v1beta1
# kind: Certificate
# metadata:
#   name: toleration-injector
#   namespace: statcan-system
#   labels:
#     apps.kubernetes.io/name: toleration-injector
# spec:
#   secretName: toleration-injector-tls
#   commonName: "toleration-injector.statcan-system.svc.cluster.local"
#   dnsNames:
#   - toleration-injector
#   - toleration-injector.statcan-system
#   - toleration-injector.statcan-system.svc
#   - toleration-injector.statcan-system.svc.cluster
#   isCA: true
#   duration: 8760h
#   issuerRef:
#     name: toleration-injector-issuer
#     kind: Issuer
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: toleration-injector
#   namespace: statcan-system
#   labels:
#     apps.kubernetes.io/name: toleration-injector
# spec:
#   selector:
#     matchLabels:
#       apps.kubernetes.io/name: toleration-injector
#   template:
#     metadata:
#       labels:
#         apps.kubernetes.io/name: toleration-injector
#       annotations:
#         sidecar.istio.io/inject: 'false'
#     spec:
#       tolerations:
#         - key: CriticalAddonsOnly
#           operator: Exists
#       serviceAccountName: toleration-injector
#       containers:
#       - name: toleration-injector
#         image: zachomedia/toleration-injector:latest
#         resources:
#           limits:
#             memory: "128Mi"
#             cpu: "500m"
#         ports:
#         - name: https
#           containerPort: 8443
#         volumeMounts:
#         - name: certs
#           mountPath: /certs
#           readOnly: true
#       volumes:
#       - name: certs
#         secret:
#           secretName: toleration-injector-tls
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: toleration-injector
#   namespace: statcan-system
#   labels:
#     apps.kubernetes.io/name: toleration-injector
# spec:
#   selector:
#     apps.kubernetes.io/name: toleration-injector
#   ports:
#   - name: https
#     port: 443
#     targetPort: 8443
# ---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: statcan-system/toleration-injector
  labels:
    apps.kubernetes.io/name: toleration-injector
    admissions.enforcer/disabled: "true"
  name: toleration-injector
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: toleration-injector
      namespace: statcan-system
      path: /mutate
      port: 443
  failurePolicy: Fail
  name: toleration-injector.statcan.gc.ca
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: apps.kubernetes.io/name
      operator: NotIn
      values: ["toleration-injector"]
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
# ---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRole
# metadata:
#   name: toleration-injector
#   labels:
#     apps.kubernetes.io/name: toleration-injector
# rules:
# - apiGroups: [""]
#   verbs: ["get", "list", "watch"]
#   resources: ["namespaces"]
# ---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRoleBinding
# metadata:
#   name: toleration-injector
#   labels:
#     apps.kubernetes.io/name: toleration-injector
# roleRef:
#   apiGroup: rbac.authorization.k8s.io
#   kind: ClusterRole
#   name: toleration-injector
# subjects:
# - kind: ServiceAccount
#   name: toleration-injector
#   namespace: statcan-system
